force-app/main/default/objects/Account__c/fields/Avatar__c.field-meta.xml
<CustomField>
    <fullName>Avatar__c</fullName>
    <label>Avatar</label>
    <type>Url</type>
</CustomField>