force-app/main/default/objects/Account__c/fields/Avatar_IMG__c.field-meta.xml
<CustomField>
    <fullName>Avatar_IMG__c</fullName>
    <formula>IMAGE( Avatar__c , "avatar" , 150, 150)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Avatar</label>
    <type>Text</type>
</CustomField>