force-app/main/default/objects/Account__c/fields/Bio__c.field-meta.xml
<CustomField>
    <fullName>Bio__c</fullName>
    <label>Bio</label>
    <length>250</length>
    <type>Text</type>
</CustomField>